--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
     - sudo yum install jq -y
     - REGISTRY_URL=https://index.docker.io/v1/
     - DOCKER_USER=smorel237
-    - DOCKER_PASSWORD=$(jq -sr '.[0].auths."https://index.docker.io/v1/".auth' ~/.docker/config.json)
+    - DOCKER_PASSWORD=$(jq -sr '.[0].auths."https://index.docker.io/v1/".auth' $HOME/.docker/config.json)
   pre_build:
     commands:
     - echo Logging in to DockerHub...
