--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
     commands:
       - echo Logging in to AWS ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 720826398753.dkr.ecr.us-east-1.amazonaws.com
-      - IMAGE_REPO_NAME=smorel237/nodejs-webapp
+      - IMAGE_REPO_NAME=720826398753.dkr.ecr.us-east-1.amazonaws.com/nodejs-webapp
       - IMAGE_TAG=v1.0.0
       - aws eks --region us-east-1 update-kubeconfig --name cicd-cluster
   build:
