--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,4 +29,4 @@ phases:
       - echo Pushing the Docker image...
       - docker push $IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Push the latest image to cluster
-      - kubectl apply -f manifest/deployment.yml
+      - kubectl apply -f manifest/deployment.yaml
